@@ -174,6 +174,7 @@
 			/>
 			<Tool
 				Name="VCLinkerTool"
+				AdditionalOptions="/ignore:4197"
 				OutputFile="../../lib/vc8/unicode/x64/debug/ilu.dll"
 				LinkIncremental="2"
 				SuppressStartupBanner="true"
@@ -372,6 +373,7 @@
 			/>
 			<Tool
 				Name="VCLinkerTool"
+				AdditionalOptions="/ignore:4197"
 				OutputFile=".\../../lib/vc8/unicode/x64/ILU.dll"
 				LinkIncremental="1"
 				SuppressStartupBanner="true"
